# Open-Code

./: .eslintrc.json  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  package-lock.json  package.json  tsconfig.json
.github/workflows/: ci.yml  fork-health.yml
crates/open-code-logic/: Cargo.toml
crates/open-code-logic/src/: lib.rs
crates/open-code-memory/: Cargo.toml
crates/open-code-memory/src/: lib.rs  main.rs
docs/: AGENT_HANDOFF.md  AGENT_RUNTIME.md  BUILD.md  DOCUMENTATION_PRESENTATIONS.md  E2E_READINESS.md  FORK_AND_RELEASE.md  GA_RELEASE_READINESS.md  GOVERNANCE.md  LOGIC_WORKSPACE.md  MVP_AND_ROADMAP.md  MVP_DELIVERY_TRACK.md  MVP_EXECUTION_PLAN.md  RELEASE.md  SECURITY.md  credentials.md  memory.md  models.md
logic/: open-code.paper.md  open-code.project.json
runtime/: model-manifest.json
scripts/: check-bootstrap.mjs  e2e-local-model.mjs  e2e-mvp.mjs  install-mvp-macos-linux.sh  probe-memoryd.mjs  try-cargo-test.mjs  try-cargo.mjs  verify-fork.sh
src/: extension.ts
src/agent/: Agent.ts  AgentContext.ts
src/ai/: APIProvider.ts  ModelProvider.ts  ModelProviderFactory.ts  OpenWeightsProvider.ts
src/credentials/: CredentialManager.ts  PreferenceManager.ts
src/memory/: HostMemory.ts  MemoryManager.ts  MemoryOrganizer.ts  RepoMemory.ts  types.ts
src/test/: agent.test.ts  credentials.test.ts  memory.test.ts  runTests.ts  vscodeStub.ts
src/ui/: AgentPanel.ts  MemoryView.ts
