[package]
name = "open-code-logic"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Logic-first project model, multi-agent coordination, and conflict detection for Open Code"

[dependencies]
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"

[lib]
name = "open_code_logic"
path = "src/lib.rs"
